# acoustid-search

./: .gitignore  .mypy.ini  README.md  pyproject.toml
.github/workflows/: test.yml
acoustid_search/: app.py  backend.py  handlers.py  index.py  types.py
acoustid_search/db/: operations.py  schema.py
acoustid_search/legacy/: backend.py
acoustid_search/legacy/db/: schema.py
acoustid_search/tests/: conftest.py  test_handlers_catalogs.py  test_handlers_documents.py  test_handlers_indexes.py
scripts/: check.sh  format.sh  server.sh
