[tool.poetry]
name = "acoustid-search"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Lukáš Lalinský <lalinsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.29"}
asyncpg = "^0.25.0"
aiohttp = "^3.8.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.2"
flake8 = "^4.0.1"
mypy = "^0.930"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-aiohttp = "^0.3.0"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
